# QuarkCore

./: .gitignore  CMakeLists.txt  README.md  VulkanRenderer.cpp
.github/workflows/: build.yml
examples/: 3d_light.cpp  file_operations.cpp  light.cpp  meshes.cpp  primitives_3d.cpp  sandbox.cpp  shaders.cpp  textures_and_shaders.cpp  vulkan.cpp
examples/resources/: lighting.fs  lighting.vs
imgui/: qcImGui.cpp  qcImGui.h
include/QuarkCore/: Quark3D.hpp  QuarkCore.hpp  QuarkLights.hpp  QuarkMath.hpp
src/: Quark3D.cpp  QuarkCore.cpp  QuarkEvent.cpp  QuarkImage.cpp  QuarkInternal.hpp  QuarkLights.cpp  QuarkUtils.hpp  QuarkWindow.cpp
src/Renderer/: QuarkFont.hpp  QuarkGLRenderer.cpp  QuarkGLRenderer.hpp  QuarkIRenderer.hpp  QuarkTexture.hpp  QuarkVkRenderer.cpp  QuarkVkRenderer.hpp
src/Renderer/QuarkVulkan/: QuarkVkDraw2D.cpp  QuarkVkDraw3D.cpp  QuarkVkFont.cpp  QuarkVkModel.cpp  QuarkVkRenderer.cpp  QuarkVkRenderer.hpp  QuarkVkShader.cpp  QuarkVkTexture.cpp
